update bytrace warehouse name for aafwk_standard Signed-off-by: wenlong12 <wenlong12@huawei.com>
Signed-off-by: wenlong12 <wwx1097114@DESKTOP-2021EGU.localdomain>

--- a/frameworks/kits/ability/ability_runtime/BUILD.gn
+++ b/frameworks/kits/ability/ability_runtime/BUILD.gn
@@ -54,7 +54,7 @@ ohos_shared_library("ability_context_native") {
     "ability_runtime:runtime",
     "access_token:libaccesstoken_sdk",
     "bundle_framework:appexecfwk_base",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "faultloggerd:lib_dfx_dump_catcher",
     "hichecker_native:libhichecker",
     "hiviewdfx_hilog_native:libhilog",
