--- a/frameworks/kits/appkit/BUILD.gn
+++ b/frameworks/kits/appkit/BUILD.gn
@@ -165,7 +165,7 @@ ohos_shared_library("appkit_native") {
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "eventhandler:libeventhandler",
     "faultloggerd:lib_dfx_dump_catcher",
     "faultloggerd:libfaultloggerd",
@@ -302,7 +302,7 @@ ohos_shared_library("appkit_delegator") {
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "eventhandler:libeventhandler",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
