--- a/interfaces/innerkits/ability_manager/BUILD.gn
+++ b/interfaces/innerkits/ability_manager/BUILD.gn
@@ -106,7 +106,7 @@ ohos_shared_library("ability_manager") {
     "ability_runtime:app_manager",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "eventhandler:libeventhandler",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
