--- a/interfaces/innerkits/app_manager/BUILD.gn
+++ b/interfaces/innerkits/app_manager/BUILD.gn
@@ -89,7 +89,7 @@ ohos_shared_library("app_manager") {
     "ability_base:configuration",
     "ability_base:want",
     "bundle_framework:appexecfwk_base",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "hiviewdfx_hilog_native:libhilog",
