--- a/services/abilitymgr/test/unittest/phone/app_scheduler_test/BUILD.gn
+++ b/services/abilitymgr/test/unittest/phone/app_scheduler_test/BUILD.gn
@@ -61,7 +61,7 @@ ohos_unittest("app_scheduler_test") {
 
   external_deps = [
     "access_token:libaccesstoken_sdk",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
   ]
