--- a/services/abilitymgr/test/unittest/phone/data_ability_manager_test/BUILD.gn
+++ b/services/abilitymgr/test/unittest/phone/data_ability_manager_test/BUILD.gn
@@ -66,7 +66,7 @@ ohos_unittest("data_ability_manager_test") {
 
   external_deps = [
     "access_token:libaccesstoken_sdk",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
   ]
