--- a/services/appmgr/test/BUILD.gn
+++ b/services/appmgr/test/BUILD.gn
@@ -103,7 +103,7 @@ ohos_source_set("appmgr_test_source") {
 
   external_deps = [
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "hiviewdfx_hilog_native:libhilog",
