--- a/services/appmgr/test/unittest/ams_ability_running_record_test/BUILD.gn
+++ b/services/appmgr/test/unittest/ams_ability_running_record_test/BUILD.gn
@@ -71,7 +71,7 @@ ohos_unittest("AmsAbilityRunningRecordTest") {
     "access_token:libaccesstoken_sdk",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "hisysevent_native:libhisysevent",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
