--- a/services/appmgr/test/unittest/ams_recent_app_list_test/BUILD.gn
+++ b/services/appmgr/test/unittest/ams_recent_app_list_test/BUILD.gn
@@ -70,7 +70,7 @@ ohos_unittest("AmsRecentAppListTest") {
     "access_token:libaccesstoken_sdk",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "hisysevent_native:libhisysevent",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
