--- a/services/appmgr/test/unittest/app_mgr_service_event_handler_test/BUILD.gn
+++ b/services/appmgr/test/unittest/app_mgr_service_event_handler_test/BUILD.gn
@@ -74,7 +74,7 @@ ohos_unittest("AMSEventHandlerTest") {
     "access_token:libaccesstoken_sdk",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
     "hiviewdfx_hilog_native:libhilog",
