--- a/services/test/moduletest/ability_timeout_module_test/BUILD.gn
+++ b/services/test/moduletest/ability_timeout_module_test/BUILD.gn
@@ -115,7 +115,7 @@ ohos_moduletest("ability_timeout_module_test") {
     "ability_base:configuration",
     "access_token:libaccesstoken_sdk",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "dsoftbus_standard:softbus_client",
