--- a/services/test/moduletest/common/ams/BUILD.gn
+++ b/services/test/moduletest/common/ams/BUILD.gn
@@ -105,7 +105,7 @@ ohos_source_set("appmgr_mst_source") {
     "access_token:libaccesstoken_sdk",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "hicollie_native:libhicollie",
