--- a/services/test/moduletest/dump_module_test/BUILD.gn
+++ b/services/test/moduletest/dump_module_test/BUILD.gn
@@ -70,7 +70,7 @@ ohos_moduletest("dump_module_test") {
 
   external_deps = [
     "access_token:libaccesstoken_sdk",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
   ]
