--- a/services/test/moduletest/on_new_want_module_test/BUILD.gn
+++ b/services/test/moduletest/on_new_want_module_test/BUILD.gn
@@ -83,7 +83,7 @@ ohos_moduletest("on_new_want_module_test") {
 
   external_deps = [
     "access_token:libaccesstoken_sdk",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "dsoftbus_standard:softbus_client",
