--- a/services/test/moduletest/running_infos_module_test/BUILD.gn
+++ b/services/test/moduletest/running_infos_module_test/BUILD.gn
@@ -110,7 +110,7 @@ ohos_moduletest("running_infos_module_test") {
   external_deps = [
     "ability_base:configuration",
     "access_token:libaccesstoken_sdk",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "dsoftbus_standard:softbus_client",
