update bytrace warehouse name Signed-off-by: wenlong12 <wenlong12@huawei.com>
Signed-off-by: wenlong12 <wwx1097114@DESKTOP-2021EGU.localdomain>

--- a/frameworks/kits/ability/native/BUILD.gn
+++ b/frameworks/kits/ability/native/BUILD.gn
@@ -230,7 +230,7 @@ ohos_shared_library("abilitykit_native") {
     "access_token:libaccesstoken_sdk",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
+    "hitrace_native:hitrace_meter",
     "common_event_service:cesfwk_innerkits",
     "ipc:ipc_core",
     "ipc_js:rpc",
