update bytrace warehouse name Signed-off-by: wenlong12 <wenlong12@huawei.com>
Signed-off-by: wenlong12 <wwx1097114@DESKTOP-2021EGU.localdomain>

--- a/services/appmgr/test/unittest/ams_app_workflow_test/BUILD.gn
+++ b/services/appmgr/test/unittest/ams_app_workflow_test/BUILD.gn
@@ -69,8 +69,8 @@ ohos_unittest("AmsWorkFlowTest") {
     "access_token:libaccesstoken_sdk",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
     "hisysevent_native:libhisysevent",
+    "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
   ]
