--- a/frameworks/kits/appkit/BUILD.gn
+++ b/frameworks/kits/appkit/BUILD.gn
@@ -165,11 +165,11 @@ ohos_shared_library("appkit_native") {
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
     "eventhandler:libeventhandler",
     "faultloggerd:lib_dfx_dump_catcher",
     "faultloggerd:libfaultloggerd",
     "hisysevent_native:libhisysevent",
+    "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
@@ -302,8 +302,8 @@ ohos_shared_library("appkit_delegator") {
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
     "eventhandler:libeventhandler",
+    "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "samgr_standard:samgr_proxy",
