--- a/services/appmgr/test/unittest/ams_app_death_recipient_test/BUILD.gn
+++ b/services/appmgr/test/unittest/ams_app_death_recipient_test/BUILD.gn
@@ -75,8 +75,8 @@ ohos_unittest("AppDeathRecipientTest") {
     "access_token:libaccesstoken_sdk",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
     "hisysevent_native:libhisysevent",
+    "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
   ]
