--- a/services/appmgr/test/unittest/ams_app_life_cycle_test/BUILD.gn
+++ b/services/appmgr/test/unittest/ams_app_life_cycle_test/BUILD.gn
@@ -72,8 +72,8 @@ ohos_unittest("AmsAppLifeCycleTest") {
     "access_token:libaccesstoken_sdk",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
     "hisysevent_native:libhisysevent",
+    "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
   ]
