--- a/services/appmgr/test/unittest/ams_service_app_spawn_client_test/BUILD.gn
+++ b/services/appmgr/test/unittest/ams_service_app_spawn_client_test/BUILD.gn
@@ -70,9 +70,9 @@ ohos_unittest("AmsServiceAppSpawnClientTest") {
     "access_token:libaccesstoken_sdk",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_core",
-    "bytrace_standard:bytrace_core",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
+    "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
   ]
