--- a/services/appmgr/test/unittest/app_running_processes_info_test/BUILD.gn
+++ b/services/appmgr/test/unittest/app_running_processes_info_test/BUILD.gn
@@ -65,8 +65,8 @@ ohos_unittest("AppRunningProcessesInfoTest") {
   external_deps = [
     "access_token:libaccesstoken_sdk",
     "appspawn:appspawn_socket_client",
-    "bytrace_standard:bytrace_core",
     "hisysevent_native:libhisysevent",
+    "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
   ]
