--- a/frameworks/kits/ability/native/BUILD.gn
+++ b/frameworks/kits/ability/native/BUILD.gn
@@ -289,6 +289,7 @@ ohos_shared_library("abilitykit_native") {
       "form_runtime:form_manager",
       "input:libmmi-client",
       "multimedia_image_standard:image",
+      "napi:ace_container_scope",
     ]
 
     public_deps += [
