foundation绝对路径整改
Signed-off-by: wx1094762 <shiqichang@huawei.com>
Change-Id: I5e1d5b5767df6af03b161c90d498d2ad409c4463

--- a/aafwk.gni
+++ b/aafwk.gni
@@ -30,6 +30,8 @@ appexecfwk_innerkits_path = "${appexecfwk_path}/interfaces/innerkits"
 
 dispatcher_path = "//foundation/aafwk/standard/common/task_dispatcher"
 
+aaservices_path = "//foundation/aafwk/standard/services"
+aainnerkits_path = "//foundation/aafwk/standard/interfaces/innerkits"
 system_test_app_path =
     "//foundation/aafwk/standard/test/resource/amssystemtestability/abilitySrc"
 
