--- a/services/abilitymgr/test/unittest/phone/data_ability_manager_test/BUILD.gn
+++ b/services/abilitymgr/test/unittest/phone/data_ability_manager_test/BUILD.gn
@@ -50,6 +50,8 @@ ohos_unittest("data_ability_manager_test") {
     "${aafwk_path}/interfaces/innerkits/uri:zuri",
     "${innerkits_path}/ability_manager:ability_manager",
     "${innerkits_path}/want:want",
+    "${services_path}/abilitymgr:abilityms",
+    "${services_path}/abilitymgr/test:abilityms_test_source",
     "${services_path}/abilitymgr/test/mock/libs/aakit:aakit_mock",
     "${services_path}/abilitymgr/test/mock/libs/appexecfwk_core:appexecfwk_appmgr_mock",
     "${services_path}/common:perm_verification",
