--- a/services/test/moduletest/common/ams/specified_ability_service_test/BUILD.gn
+++ b/services/test/moduletest/common/ams/specified_ability_service_test/BUILD.gn
@@ -61,6 +61,7 @@ ohos_moduletest("specified_ability_service_test") {
     "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
     "${innerkits_path}/uri_permission:uri_permission_mgr",
     "${innerkits_path}/want:want",
+    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
     "//third_party/jsoncpp:jsoncpp",
