--- a/services/test/moduletest/ability_timeout_module_test/BUILD.gn
+++ b/services/test/moduletest/ability_timeout_module_test/BUILD.gn
@@ -25,7 +25,7 @@ ohos_moduletest("ability_timeout_module_test") {
     "${aafwk_path}/frameworks/kits/ability/native/include/distributed_ability_runtime",
     "${aafwk_path}/interfaces/innerkits/dataobs_manager/include",
     "//base/hiviewdfx/hicollie/interfaces/native/innerkits/include/xcollie",
-    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
+    "//base/startup/init_lite/interfaces/innerkits/include/syspara",
   ]
 
   sources = [ "ability_timeout_module_test.cpp" ]
@@ -87,7 +87,7 @@ ohos_moduletest("ability_timeout_module_test") {
     "${innerkits_path}/uri_permission:uri_permission_mgr",
     "${innerkits_path}/want:want",
     "${services_path}/common:perm_verification",
-    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
+    "//base/startup/init_lite/interfaces/innerkits:libbegetutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
     "//third_party/jsoncpp:jsoncpp",
