--- a/services/test/moduletest/running_infos_module_test/BUILD.gn
+++ b/services/test/moduletest/running_infos_module_test/BUILD.gn
@@ -83,7 +83,7 @@ ohos_moduletest("running_infos_module_test") {
     "${innerkits_path}/uri_permission:uri_permission_mgr",
     "${innerkits_path}/want:want",
     "${services_path}/common:perm_verification",
-    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
+    "//base/startup/init_lite/interfaces/innerkits:libbegetutil",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
     "//third_party/jsoncpp:jsoncpp",
