--- a/services/abilitymgr/abilitymgr.gni
+++ b/services/abilitymgr/abilitymgr.gni
@@ -50,6 +50,7 @@ abilityms_files = [
   "src/ams_configuration_parameter.cpp",
   "src/image_info.cpp",
   "src/mission_snapshot.cpp",
+  "src/event_report.cpp",
 
   # new ability manager service here
   "src/task_data_persistence_mgr.cpp",
