--- a/hisysevent.yaml
+++ b/hisysevent.yaml
@@ -93,4 +93,55 @@ ABILITY_ONSTART:
   DEVICE_ID: {type: INT32, desc: deviceId}
   URI: {type: STRING, desc: uri}
   ACTION: {type: STRING, desc: action}
-  ABILITY_TYPE: {type: STRING, desc: ability type}
+
+ABILITY_ONSTOP:
+  __BASE: {type: BEHAVIOR, level: MINOR, tag: IDENTIFICATION, desc: callback for ability}
+  BUNDLE_NAME: {type: STRING, desc: bundle name}
+  ABILITY_NAME: {type: STRING, desc: ability name}
+
+ABILITY_ONACTIVE:
+  __BASE: {type: BEHAVIOR, level: MINOR, tag: IDENTIFICATION, desc: callback for ability}
+  BUNDLE_NAME: {type: STRING, desc: bundle name}
+  ABILITY_NAME: {type: STRING, desc: ability name}
+
+ABILITY_ONINACTIVE:
+  __BASE: {type: BEHAVIOR, level: MINOR, tag: IDENTIFICATION, desc: callback for ability}
+  BUNDLE_NAME: {type: STRING, desc: bundle name}
+  ABILITY_NAME: {type: STRING, desc: ability name}
+
+ABILITY_ONFOREGROUND:
+  __BASE: {type: BEHAVIOR, level: MINOR, tag: IDENTIFICATION, desc: callback for ability}
+  BUNDLE_NAME: {type: STRING, desc: bundle name}
+  ABILITY_NAME: {type: STRING, desc: ability name}
+  DEVICE_ID: {type: INT32, desc: deviceId}
+  URI: {type: STRING, desc: uri}
+  ACTION: {type: STRING, desc: action}
+
+ABILITY_ONBACKGROUND:
+  __BASE: {type: BEHAVIOR, level: MINOR, tag: IDENTIFICATION, desc: callback for ability}
+  BUNDLE_NAME: {type: STRING, desc: bundle name}
+  ABILITY_NAME: {type: STRING, desc: ability name}
+
+ABILITY_ONCONNECT:
+  __BASE: {type: BEHAVIOR, level: MINOR, tag: IDENTIFICATION, desc: callback for ability}
+  BUNDLE_NAME: {type: STRING, desc: bundle name}
+  ABILITY_NAME: {type: STRING, desc: ability name}
+  DEVICE_ID: {type: INT32, desc: deviceId}
+  URI: {type: STRING, desc: uri}
+  ACTION: {type: STRING, desc: action}
+
+ABILITY_ONDISCONNECT:
+  __BASE: {type: BEHAVIOR, level: MINOR, tag: IDENTIFICATION, desc: callback for ability}
+  BUNDLE_NAME: {type: STRING, desc: bundle name}
+  ABILITY_NAME: {type: STRING, desc: ability name}
+  DEVICE_ID: {type: INT32, desc: deviceId}
+  URI: {type: STRING, desc: uri}
+  ACTION: {type: STRING, desc: action}
+
+ABILITY_ONCOMMAND:
+  __BASE: {type: BEHAVIOR, level: MINOR, tag: IDENTIFICATION, desc: callback for ability}
+  BUNDLE_NAME: {type: STRING, desc: bundle name}
+  ABILITY_NAME: {type: STRING, desc: ability name}
+  DEVICE_ID: {type: INT32, desc: deviceId}
+  URI: {type: STRING, desc: uri}
+  ACTION: {type: STRING, desc: action}
