zhoushicheng2@huawei.com
Signed-off-by: zhoushicheng2@huawei.com <zhoushicheng2@huawei.com>
Change-Id: I2bef3d704adb7a0be5c0e7ea2c1bf34914ce151e

--- a/services/test/moduletest/common/ams/app_service_flow_test/BUILD.gn
+++ b/services/test/moduletest/common/ams/app_service_flow_test/BUILD.gn
@@ -26,6 +26,7 @@ ohos_moduletest("AmsAppServiceFlowModuleTest") {
   deps = [
     "${services_path}/common:perm_verification",
     "${services_path}/test/moduletest/common/ams:appmgr_mst_source",
+    "${services_path}/appmgr:libappms",
   ]
 
   external_deps = [
