zhoushicheng2@huawei.com
Signed-off-by: zhoushicheng2@huawei.com <zhoushicheng2@huawei.com>
Change-Id: Ida90a6447bd3e6b9f4dab53586fa0425c9290f70

--- a/services/test/moduletest/common/ams/app_running_processes_info_module_test/BUILD.gn
+++ b/services/test/moduletest/common/ams/app_running_processes_info_module_test/BUILD.gn
@@ -25,7 +25,10 @@ ohos_moduletest("AppRunningProcessesInfoModuleTest") {
   ]
   sources = [ "app_running_processes_info_module_test.cpp" ]
 
-  deps = [ "${services_path}/test/moduletest/common/ams:appmgr_mst_source" ]
+  deps = [
+    "${services_path}/test/moduletest/common/ams:appmgr_mst_source",
+    "${services_path}/appmgr:libappms",
+  ]
 
   external_deps = [ "ipc:ipc_core" ]
 }
