--- a/services/appmgr/test/unittest/ams_recent_app_list_test/BUILD.gn
+++ b/services/appmgr/test/unittest/ams_recent_app_list_test/BUILD.gn
@@ -42,6 +42,8 @@ ohos_unittest("AmsRecentAppListTest") {
   ]
 
   sources += [ "ams_recent_app_list_test.cpp" ]
+
+  configs = [ "${services_path}/appmgr/test:appmgr_test_config" ]
   cflags = []
   if (target_cpu == "arm") {
     cflags += [ "-DBINDER_IPC_32BIT" ]
@@ -55,6 +57,7 @@ ohos_unittest("AmsRecentAppListTest") {
     "${appexecfwk_innerkits_path}/libeventhandler:libeventhandler",
     "${distributedschedule_path}/safwk/interfaces/innerkits/safwk:system_ability_fwk",
     "${innerkits_path}/uri_permission:uri_permission_mgr",
+    "${services_path}/appmgr:libappms",
     "${services_path}/appmgr/test:appmgr_test_source",
     "${services_path}/common:perm_verification",
   ]
