--- a/services/appmgr/test/unittest/ams_service_event_drive_test/BUILD.gn
+++ b/services/appmgr/test/unittest/ams_service_event_drive_test/BUILD.gn
@@ -46,6 +46,7 @@ ohos_unittest("AmsServiceEventDriveTest") {
 
   sources += [ "ams_service_event_drive_test.cpp" ]
 
+  configs = [ "${services_path}/appmgr/test:appmgr_test_config" ]
   cflags = []
   if (target_cpu == "arm") {
     cflags += [ "-DBINDER_IPC_32BIT" ]
@@ -54,9 +55,9 @@ ohos_unittest("AmsServiceEventDriveTest") {
     "${aafwk_path}/interfaces/innerkits/app_manager:app_manager",
     "${aafwk_path}/interfaces/innerkits/base:base",
     "${aafwk_path}/interfaces/innerkits/want:want",
-    "${aafwk_path}/services/appmgr:libappms",
     "${distributedschedule_path}/safwk/interfaces/innerkits/safwk:system_ability_fwk",
     "${innerkits_path}/uri_permission:uri_permission_mgr",
+    "${services_path}/appmgr:libappms",
     "${services_path}/appmgr/test:appmgr_test_source",
     "${services_path}/common:perm_verification",
   ]
