--- a/services/appmgr/test/unittest/ams_service_startup_test/BUILD.gn
+++ b/services/appmgr/test/unittest/ams_service_startup_test/BUILD.gn
@@ -43,6 +43,7 @@ ohos_unittest("AmsServiceStartupTest") {
   sources += [ "ams_service_startup_test.cpp" ]
 
   configs = [ "${appexecfwk_path}/libs/libeventhandler:libeventhandler_config" ]
+  configs += [ "${services_path}/appmgr/test:appmgr_test_config" ]
   cflags = []
   if (target_cpu == "arm") {
     cflags += [ "-DBINDER_IPC_32BIT" ]
@@ -51,10 +52,10 @@ ohos_unittest("AmsServiceStartupTest") {
     "${aafwk_path}/interfaces/innerkits/app_manager:app_manager",
     "${aafwk_path}/interfaces/innerkits/base:base",
     "${aafwk_path}/interfaces/innerkits/want:want",
-    "${aafwk_path}/services/appmgr:libappms",
     "${appexecfwk_path}/libs/libeventhandler:libeventhandler_target",
     "${distributedschedule_path}/safwk/interfaces/innerkits/safwk:system_ability_fwk",
     "${innerkits_path}/uri_permission:uri_permission_mgr",
+    "${services_path}/appmgr:libappms",
     "${services_path}/appmgr/test:appmgr_test_source",
     "${services_path}/common:perm_verification",
     "//utils/native/base:utils",
