--- a/services/appmgr/test/unittest/app_running_processes_info_test/BUILD.gn
+++ b/services/appmgr/test/unittest/app_running_processes_info_test/BUILD.gn
@@ -42,6 +42,8 @@ ohos_unittest("AppRunningProcessesInfoTest") {
 
   sources += [ "app_running_processes_info_test.cpp" ]
 
+  configs = [ "${services_path}/appmgr/test:appmgr_test_config" ]
+
   cflags = []
   if (target_cpu == "arm") {
     cflags += [ "-DBINDER_IPC_32BIT" ]
@@ -49,9 +51,9 @@ ohos_unittest("AppRunningProcessesInfoTest") {
   deps = [
     "${aafwk_path}/interfaces/innerkits/ability_manager:ability_manager",
     "${aafwk_path}/interfaces/innerkits/app_manager:app_manager",
-    "${aafwk_path}/services/appmgr:libappms",
     "${appexecfwk_inner_api_path}/appexecfwk_core:appexecfwk_core",
     "${innerkits_path}/uri_permission:uri_permission_mgr",
+    "${services_path}/appmgr:libappms",
     "${services_path}/appmgr/test:appmgr_test_source",
   ]
 
