zhoushicheng2@huawei.com
Signed-off-by: zhoushicheng2@huawei.com <zhoushicheng2@huawei.com>
Change-Id: Ibc3b6db4026cb131dd76bec89ed1b9bc9c4257fe

--- a/services/test/moduletest/common/ams/app_recent_list_test/BUILD.gn
+++ b/services/test/moduletest/common/ams/app_recent_list_test/BUILD.gn
@@ -30,6 +30,10 @@ ohos_moduletest("AmsAppRecentListModuleTest") {
     "${services_path}/test/moduletest/common/ams:appmgr_mst_source",
   ]
 
+  if (ability_runtime_graphics) {
+    deps += [ "${global_path}/i18n/frameworks/intl:intl_util" ]
+  }
+
   external_deps = [
     "hicollie_native:libhicollie",
     "ipc:ipc_core",
