--- a/services/test/moduletest/common/ams/app_running_processes_info_module_test/BUILD.gn
+++ b/services/test/moduletest/common/ams/app_running_processes_info_module_test/BUILD.gn
@@ -30,6 +30,10 @@ ohos_moduletest("AppRunningProcessesInfoModuleTest") {
     "${services_path}/test/moduletest/common/ams:appmgr_mst_source",
   ]
 
+  if (ability_runtime_graphics) {
+    deps += [ "${global_path}/i18n/frameworks/intl:intl_util" ]
+  }
+
   external_deps = [ "ipc:ipc_core" ]
 }
 
