IssueNo:#I5756V:jSON解析统一整改 Description:Improve jSON parse issue and Add some TDD test cases Sig:SIG_ApplicationFramework Feature or Bugfix: Bugfix Binary Source:No
Signed-off-by: yanwenhao <yanwenhao9@huawei.com>
Change-Id: I50b98a8da560d1f2aeb7c5ad03b65fd4cc87fd33

--- a/services/abilitymgr/test/BUILD.gn
+++ b/services/abilitymgr/test/BUILD.gn
@@ -177,6 +177,7 @@ group("unittest") {
     "unittest/phone/ability_timeout_test",
     "unittest/phone/ability_token_proxy_test:unittest",
     "unittest/phone/ability_token_stub_test:unittest",
+    "unittest/phone/ams_configuration_parameter_test:unittest",
     "unittest/phone/app_scheduler_test:unittest",
     "unittest/phone/configuration_test:unittest",
     "unittest/phone/connection_record_test:unittest",
