--- a/interfaces/innerkits/ability_manager/BUILD.gn
+++ b/interfaces/innerkits/ability_manager/BUILD.gn
@@ -93,7 +93,10 @@ ohos_shared_library("ability_manager") {
     "${services_path}/abilitymgr:abilityms_config",
   ]
 
-  deps = [ "//third_party/jsoncpp:jsoncpp" ]
+  deps = [
+    "//third_party/jsoncpp:jsoncpp",
+    "${services_path}/common:perm_verification",
+  ]
 
   external_deps = [
     "ability_base:base",
