--- a/services/common/BUILD.gn
+++ b/services/common/BUILD.gn
@@ -46,10 +46,16 @@ config("perm_verification_config") {
 ohos_shared_library("perm_verification") {
   public_configs = [ ":perm_verification_config" ]
 
-  sources = [ "src/permission_verification.cpp" ]
+  sources = [
+    "src/permission_verification.cpp",
+    "src/event_report.cpp",
+  ]
 
   external_deps = [
+    "ability_base:want",
     "access_token:libaccesstoken_sdk",
+    "bundle_framework:appexecfwk_base",
+    "hisysevent_native:libhisysevent",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "utils_base:utils",
