zhoushicheng2@huawei.com
Signed-off-by: zhoushicheng2@huawei.com <zhoushicheng2@huawei.com>
Change-Id: I4504a694546657313f661c9eaeb1288b0f1aea5d

--- a/services/common/BUILD.gn
+++ b/services/common/BUILD.gn
@@ -55,6 +55,7 @@ ohos_shared_library("perm_verification") {
     "ability_base:want",
     "access_token:libaccesstoken_sdk",
     "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
     "hisysevent_native:libhisysevent",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
