--- a/frameworks/kits/ability/native/BUILD.gn
+++ b/frameworks/kits/ability/native/BUILD.gn
@@ -225,6 +225,7 @@ ohos_shared_library("abilitykit_native") {
     "ipc_js:rpc",
     "relational_store:native_appdatafwk",
     "relational_store:native_rdb",
+    "relational_store:native_rdb_data_share_adapter",
     "resource_management:global_resmgr",
     "samgr_standard:samgr_proxy",
     "utils_base:utils",
@@ -247,7 +248,7 @@ ohos_shared_library("abilitykit_native") {
   }
 
   public_deps = [
-    "${bundlefwk_innerkits_path}/libeventhandler:libeventhandler",
+    "${appexecfwk_innerkits_path}/libeventhandler:libeventhandler",
     "${global_path}/resource_management/frameworks/resmgr:global_resmgr",
     "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
     "//foundation/arkui/napi:ace_napi",
