Fully Implemented GetFormsInfo; Fixed previous warnings
Signed-off-by: yanwenhao <yanwenhao9@huawei.com>
Change-Id: I392231aec9a92737d2ba408c4a8089133f2bd35e

--- a/form_runtime/frameworks/js/napi/BUILD.gn
+++ b/form_runtime/frameworks/js/napi/BUILD.gn
@@ -225,6 +225,7 @@ ohos_shared_library("formprovider_napi") {
   deps = [
     ":formutil_napi",
     "${ability_runtime_kits_path}/appkit:appkit_native",
+    "${form_runtime_path}:fmskit_native",
   ]
 
   external_deps = [
