--- a/services/test/moduletest/running_infos_module_test/BUILD.gn
+++ b/services/test/moduletest/running_infos_module_test/BUILD.gn
@@ -110,7 +110,7 @@ ohos_moduletest("running_infos_module_test") {
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "dataability:native_dataability",
-    "dsoftbus_standard:softbus_client",
+    "dsoftbus:softbus_client",
     "hicollie_native:libhicollie",
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
