--- a/interfaces/innerkits/ability_manager/BUILD.gn
+++ b/interfaces/innerkits/ability_manager/BUILD.gn
@@ -75,6 +75,7 @@ ohos_shared_library("ability_manager") {
     "${services_path}/abilitymgr/src/mission_snapshot.cpp",
     "${services_path}/abilitymgr/src/remote_mission_listener_proxy.cpp",
     "${services_path}/abilitymgr/src/remote_mission_listener_stub.cpp",
+    "${services_path}/abilitymgr/src/system_ability_token_callback_stub.cpp",
     "${services_path}/abilitymgr/src/sender_info.cpp",
     "${services_path}/abilitymgr/src/start_options.cpp",
     "${services_path}/abilitymgr/src/stop_user_callback_proxy.cpp",
