--- a/services/test/moduletest/ability_record_test/BUILD.gn
+++ b/services/test/moduletest/ability_record_test/BUILD.gn
@@ -89,6 +89,7 @@ ohos_moduletest("AbilityRecordModuleTest") {
     "//third_party/googletest:gtest_main",
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utilsbase",
+    "//third_party/icu/icu4c:shared_icuuc",
   ]
 
   if (os_account_part_enabled) {
