--- a/services/test/moduletest/common/ams/specified_ability_service_test/BUILD.gn
+++ b/services/test/moduletest/common/ams/specified_ability_service_test/BUILD.gn
@@ -64,6 +64,7 @@ ohos_moduletest("specified_ability_service_test") {
     "//third_party/googletest:gtest_main",
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
+    "//third_party/icu/icu4c:shared_icuuc",
   ]
 
   if (os_account_part_enabled) {
