--- a/services/test/moduletest/running_infos_module_test/BUILD.gn
+++ b/services/test/moduletest/running_infos_module_test/BUILD.gn
@@ -86,6 +86,7 @@ ohos_moduletest("running_infos_module_test") {
     "//third_party/googletest:gtest_main",
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
+    "//third_party/icu/icu4c:shared_icuuc",
   ]
 
   if (os_account_part_enabled) {
