--- a/interfaces/kits/napi/BUILD.gn
+++ b/interfaces/kits/napi/BUILD.gn
@@ -28,6 +28,7 @@ group("napi_packages") {
     "${aafwk_path}/interfaces/kits/napi/aafwk/app/app_manager:appmanager_napi",
     "${aafwk_path}/interfaces/kits/napi/aafwk/app/application_context:applicationcontext_napi",
     "${aafwk_path}/interfaces/kits/napi/aafwk/app/context:context_napi",
+    "${aafwk_path}/interfaces/kits/napi/aafwk/app/error_manager:errormanager_napi",
     "${aafwk_path}/interfaces/kits/napi/aafwk/app/test_runner:testrunner_napi",
     "${aafwk_path}/interfaces/kits/napi/aafwk/callee:callee_napi",
     "${aafwk_path}/interfaces/kits/napi/aafwk/caller:caller_napi",
