--- a/services/test/moduletest/ability_record_test/BUILD.gn
+++ b/services/test/moduletest/ability_record_test/BUILD.gn
@@ -87,6 +87,7 @@ ohos_moduletest("AbilityRecordModuleTest") {
     "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/icu/icu4c:shared_icuuc",
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utilsbase",
   ]
