--- a/services/test/moduletest/ability_timeout_module_test/BUILD.gn
+++ b/services/test/moduletest/ability_timeout_module_test/BUILD.gn
@@ -88,6 +88,7 @@ ohos_moduletest("ability_timeout_module_test") {
     "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
+    "//third_party/icu/icu4c:shared_icuuc",
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
   ]
