--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -88,7 +88,7 @@ ohos_shared_library("abilityms") {
     "ability_runtime:abilitykit_native",
     "ability_runtime:app_manager",
     "access_token:libaccesstoken_sdk",
-    "background_task_mgr:bgtaskmgr_innerkits"
+    "background_task_mgr:bgtaskmgr_innerkits",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "common_event_service:cesfwk_core",
