--- a/services/abilitymgr/abilitymgr.gni
+++ b/services/abilitymgr/abilitymgr.gni
@@ -81,6 +81,9 @@ abilityms_files = [
   "src/atomic_service_status_callback_stub.cpp",
   "src/atomic_service_status_callback.cpp",
   "src/free_install_manager.cpp",
+
+  #background_task_observer
+  "src/background_task_observer.cpp"
 ]
 
 if (ability_runtime_graphics) {
