--- a/services/abilitymgr/abilitymgr.gni
+++ b/services/abilitymgr/abilitymgr.gni
@@ -83,7 +83,7 @@ abilityms_files = [
   "src/free_install_manager.cpp",
 
   #background_task_observer
-  "src/background_task_observer.cpp"
+  "src/background_task_observer.cpp",
 ]
 
 if (ability_runtime_graphics) {
