--- a/services/abilitymgr/test/BUILD.gn
+++ b/services/abilitymgr/test/BUILD.gn
@@ -73,6 +73,7 @@ ohos_source_set("abilityms_test_source") {
     "//base/account/os_account/frameworks/common/database/include",
     "//base/account/os_account/interfaces/innerkits/osaccount/native/include",
     "//base/hiviewdfx/hicollie/interfaces/native/innerkits/include/xcollie",
+    "//foundation/resourceschedule/background_task_mgr/interfaces/innerkits/include",
   ]
 
   external_dependent_files = [
@@ -141,6 +142,7 @@ ohos_source_set("abilityms_test_source") {
     "bundle_framework:appexecfwk_core",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
+    "background_task_mgr:bgtaskmgr_innerkits",
     "dataability:native_dataability",
     "dsoftbus_standard:softbus_client",
     "hicollie_native:libhicollie",
