增加sandbox沙盒功能
Signed-off-by: Mupceet <laiguizhong@huawei.com>
Change-Id: I88e03b2727f65bb7d2fba19925cda2354f8ea886

--- a/frameworks/kits/wantagent/BUILD.gn
+++ b/frameworks/kits/wantagent/BUILD.gn
@@ -79,7 +79,8 @@ ohos_shared_library("wantagent_innerkits") {
   if (ability_runtime_graphics) {
     external_deps += [ "multimedia_image_standard:image_native" ]
   }
-
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
   subsystem_name = "aafwk"
   part_name = "ability_runtime"
 }
