--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -131,7 +131,8 @@ ohos_shared_library("abilityms") {
       "window_manager:libwm",
     ]
   }
-
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
   subsystem_name = "aafwk"
   part_name = "ability_runtime"
 }
