增加sandbox沙盒功能
Signed-off-by: xlei1030 <xionglei6@huawei.com>

--- a/interfaces/inner_api/dataobs_manager/BUILD.gn
+++ b/interfaces/inner_api/dataobs_manager/BUILD.gn
@@ -54,6 +54,9 @@ ohos_shared_library("dataobs_manager") {
     "utils_base:utils",
   ]
 
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
+
   subsystem_name = "ability"
   part_name = "ability_runtime"
 }
