--- a/ability_base/BUILD.gn
+++ b/ability_base/BUILD.gn
@@ -49,6 +49,9 @@ ohos_shared_library("base") {
   public_configs = [ ":base_public_config" ]
   external_deps = [ "utils_base:utils" ]
 
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
+
   subsystem_name = "ability"
   part_name = "ability_base"
 }
@@ -111,6 +114,9 @@ ohos_shared_library("zuri") {
     "utils_base:utils",
   ]
 
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
+
   subsystem_name = "ability"
   part_name = "ability_base"
 }
@@ -171,6 +177,10 @@ ohos_shared_library("want") {
 
   configs = [ ":want_config" ]
   public_configs = [ ":want_public_config" ]
+
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
+
   subsystem_name = "ability"
   part_name = "ability_base"
 }
