--- a/frameworks/js/napi/aafwk/inner/napi_common/BUILD.gn
+++ b/frameworks/js/napi/aafwk/inner/napi_common/BUILD.gn
@@ -62,6 +62,9 @@ ohos_shared_library("napi_common") {
     defines = [ "SUPPORT_GRAPHICS" ]
   }
 
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
+
   subsystem_name = "ability"
   part_name = "ability_runtime"
 }
