--- a/frameworks/kits/wantagent/BUILD.gn
+++ b/frameworks/kits/wantagent/BUILD.gn
@@ -80,6 +80,9 @@ ohos_shared_library("wantagent_innerkits") {
     external_deps += [ "multimedia_image_standard:image_native" ]
   }
 
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
+
   subsystem_name = "ability"
   part_name = "ability_runtime"
 }
