--- a/interfaces/inner_api/ability_manager/BUILD.gn
+++ b/interfaces/inner_api/ability_manager/BUILD.gn
@@ -120,6 +120,9 @@ ohos_shared_library("ability_manager") {
     external_deps += [ "multimedia_image_standard:image_native" ]
   }
 
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
+
   subsystem_name = "ability"
   part_name = "ability_runtime"
 }
