--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -133,6 +133,9 @@ ohos_shared_library("abilityms") {
     ]
   }
 
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
+
   subsystem_name = "ability"
   part_name = "ability_runtime"
 }
