--- a/form_fwk/BUILD.gn
+++ b/form_fwk/BUILD.gn
@@ -174,7 +174,8 @@ ohos_shared_library("fmskit_native") {
     "samgr_standard:samgr_proxy",
     "utils_base:utils",
   ]
-
+  install_images = [ system_base_dir ]
+  relative_install_dir = "platformsdk"
   subsystem_name = "ability"
   part_name = "form_fwk"
 }
