appdatamgr仓部件及目录整改
Signed-off-by: PaDaBoo <xuejianwu@huawei.com>

--- a/frameworks/kits/ability/native/test/BUILD.gn
+++ b/frameworks/kits/ability/native/test/BUILD.gn
@@ -113,10 +113,10 @@ ohos_unittest("ability_test") {
     "ability_base:configuration",
     "ability_base:zuri",
     "ability_runtime:runtime",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
@@ -395,10 +395,10 @@ ohos_unittest("data_ability_helper_test") {
     "ability_base:base",
     "ability_base:want",
     "ability_base:zuri",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
@@ -430,10 +430,10 @@ ohos_unittest("data_ability_operation_test") {
     "ability_base:base",
     "ability_base:want",
     "ability_base:zuri",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
@@ -511,10 +511,10 @@ ohos_unittest("ability_impl_test") {
     "ability_base:zuri",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_core",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
@@ -564,10 +564,10 @@ ohos_unittest("ability_thread_test") {
     "ability_base:want",
     "ability_base:zuri",
     "ability_runtime:runtime",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
@@ -686,10 +686,10 @@ ohos_unittest("data_ability_impl_test") {
     "ability_base:want",
     "ability_base:zuri",
     "ability_runtime:runtime",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
@@ -739,10 +739,10 @@ ohos_unittest("data_ability_impl_file_secondpart_test") {
     "ability_base:want",
     "ability_base:zuri",
     "ability_runtime:runtime",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
@@ -792,10 +792,10 @@ ohos_unittest("data_ability_impl_file_test") {
     "ability_base:want",
     "ability_base:zuri",
     "ability_runtime:runtime",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
@@ -847,10 +847,10 @@ ohos_unittest("ability_thread_dataability_test") {
     "ability_base:want",
     "ability_base:zuri",
     "ability_runtime:runtime",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
@@ -1117,10 +1117,10 @@ ohos_unittest("continuation_test") {
     "ability_base:want",
     "ability_base:zuri",
     "ability_runtime:runtime",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
