--- a/frameworks/kits/test/BUILD.gn
+++ b/frameworks/kits/test/BUILD.gn
@@ -99,10 +99,10 @@ ohos_moduletest("ability_moduletest") {
     "ability_base:want",
     "ability_base:zuri",
     "bundle_framework:appexecfwk_core",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
@@ -158,10 +158,10 @@ ohos_moduletest("ability_conetxt_test") {
     "ability_base:want",
     "ability_base:zuri",
     "bundle_framework:appexecfwk_core",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
   if (ability_runtime_graphics) {
@@ -252,10 +252,10 @@ ohos_moduletest("data_ability_operation_moduletest") {
     "ability_base:want",
     "ability_base:zuri",
     "bundle_framework:appexecfwk_core",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
@@ -300,10 +300,10 @@ ohos_moduletest("data_ability_helper_module_test") {
     "ability_base:base",
     "ability_base:want",
     "ability_base:zuri",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
