--- a/interfaces/inner_api/ability_manager/BUILD.gn
+++ b/interfaces/inner_api/ability_manager/BUILD.gn
@@ -29,9 +29,9 @@ config("ability_manager_public_config") {
     "${bundlefwk_inner_api_path}/appexecfwk_core/include/bundlemgr",
     "${innerkits_path}/app_manager/include/appmgr",
     "${kits_path}/appkit/native/app/include",
-    "${distributeddatamgr_path}/appdatamgr/interfaces/inner_api/native/rdb/include",
-    "${distributeddatamgr_path}/appdatamgr/interfaces/inner_api/native/appdatafwk/include",
-    "${distributeddatamgr_path}/appdatamgr/interfaces/inner_api/native/dataability/include",
+    "${distributeddatamgr_path}/appdatamgr/relational_store/interfaces/inner_api/rdb/include",
+    "${distributeddatamgr_path}/appdatamgr/relational_store/interfaces/inner_api/appdatafwk/include",
+    "${distributeddatamgr_path}/appdatamgr/relational_store/interfaces/inner_api/dataability/include",
     "${innerkits_path}/dataobs_manager/include",
   ]
 
@@ -104,12 +104,12 @@ ohos_shared_library("ability_manager") {
     "ability_runtime:app_manager",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
-    "dataability:native_dataability",
     "eventhandler:libeventhandler",
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
     "samgr_standard:samgr_proxy",
     "utils_base:utils",
