--- a/services/abilitymgr/test/unittest/phone/ability_connect_callback_proxy_test/BUILD.gn
+++ b/services/abilitymgr/test/unittest/phone/ability_connect_callback_proxy_test/BUILD.gn
@@ -57,10 +57,10 @@ ohos_unittest("ability_connect_callback_proxy_test") {
     "ability_base:want",
     "ability_base:zuri",
     "access_token:libaccesstoken_sdk",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 }
