--- a/services/test/moduletest/ability_record_test/BUILD.gn
+++ b/services/test/moduletest/ability_record_test/BUILD.gn
@@ -115,7 +115,6 @@ ohos_moduletest("AbilityRecordModuleTest") {
     "bundle_framework:appexecfwk_core",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
-    "dataability:native_dataability",
     "dsoftbus_standard:softbus_client",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
@@ -123,6 +122,7 @@ ohos_moduletest("AbilityRecordModuleTest") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
