--- a/services/test/moduletest/common/ams/specified_ability_service_test/BUILD.gn
+++ b/services/test/moduletest/common/ams/specified_ability_service_test/BUILD.gn
@@ -86,7 +86,6 @@ ohos_moduletest("specified_ability_service_test") {
     "access_token:libaccesstoken_sdk",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
-    "dataability:native_dataability",
     "dsoftbus_standard:softbus_client",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
@@ -94,6 +93,7 @@ ohos_moduletest("specified_ability_service_test") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
