--- a/test/resource/amssystemtestability/abilitySrc/amsDataSystemTestA/BUILD.gn
+++ b/test/resource/amssystemtestability/abilitySrc/amsDataSystemTestA/BUILD.gn
@@ -52,8 +52,8 @@ ohos_shared_library("amsDataSystemTestA") {
     "${aafwk_path}/frameworks/kits/appkit:appkit_native",
     "${aafwk_path}/interfaces/inner_api/app_manager:app_manager",
     "${ability_base_path}:want",
-    "${distributeddatamgr_path}/appdatamgr/interfaces/inner_api/native/dataability:native_dataability",
-    "${distributeddatamgr_path}/appdatamgr/interfaces/inner_api/native/rdb:native_rdb",
+    "${distributeddatamgr_path}/appdatamgr/relational_store/interfaces/inner_api/dataability:native_dataability",
+    "${distributeddatamgr_path}/appdatamgr/relational_store/interfaces/inner_api/rdb:native_rdb",
     "${inner_api_path}/appexecfwk_base:appexecfwk_base",
     "${services_path}/bundlemgr:libbms",
     "//third_party/jsoncpp:jsoncpp",
@@ -63,10 +63,10 @@ ohos_shared_library("amsDataSystemTestA") {
     "ability_base:zuri",
     "bundle_framework:appexecfwk_core",
     "common_event_service:cesfwk_innerkits",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
   subsystem_name = "amssystemtestability"
