--- a/form_fwk/frameworks/js/napi/BUILD.gn
+++ b/form_fwk/frameworks/js/napi/BUILD.gn
@@ -182,6 +182,7 @@ ohos_shared_library("formhost_napi") {
     "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
+    "form_fwk:fmskit_native",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
