--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -38,9 +38,9 @@ config("abilityms_config") {
     "//prebuilts/jdk/jdk8/linux-x86/include/linux",
     "//third_party/json/include",
     "${kits_path}/ability/native/include",
-    "${distributeddatamgr_path}/appdatamgr/interfaces/inner_api/native/rdb/include",
-    "${distributeddatamgr_path}/appdatamgr/interfaces/inner_api/native/appdatafwk/include",
-    "${distributeddatamgr_path}/appdatamgr/interfaces/inner_api/native/dataability/include",
+    "${distributeddatamgr_path}/appdatamgr/relational_store/interfaces/inner_api/rdb/include",
+    "${distributeddatamgr_path}/appdatamgr/relational_store/interfaces/inner_api/appdatafwk/include",
+    "${distributeddatamgr_path}/appdatamgr/relational_store/interfaces/inner_api/dataability/include",
     "${innerkits_path}/dataobs_manager/include",
     "${aafwk_path}/tools/aa/include",
     "//base/hiviewdfx/hiview/adapter/utility/include",
@@ -106,7 +106,6 @@ ohos_shared_library("abilityms") {
     "bundle_framework:appexecfwk_core",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
-    "dataability:native_dataability",
     "dsoftbus:softbus_client",
     "eventhandler:libeventhandler",
     "hicollie_native:libhicollie",
@@ -114,6 +113,7 @@ ohos_shared_library("abilityms") {
     "hitrace_native:hitrace_meter",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
     "resource_management:global_resmgr",
     "safwk:system_ability_fwk",
