--- a/services/abilitymgr/test/BUILD.gn
+++ b/services/abilitymgr/test/BUILD.gn
@@ -146,7 +146,6 @@ ohos_source_set("abilityms_test_source") {
     "bundle_framework:appexecfwk_core",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
-    "dataability:native_dataability",
     "dsoftbus:softbus_client",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
@@ -154,6 +153,7 @@ ohos_source_set("abilityms_test_source") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
     "resource_management:global_resmgr",
   ]
