--- a/services/abilitymgr/test/unittest/phone/mission_list_manager_ut_test/BUILD.gn
+++ b/services/abilitymgr/test/unittest/phone/mission_list_manager_ut_test/BUILD.gn
@@ -56,10 +56,10 @@ ohos_unittest("mission_list_manager_ut_test") {
     "ability_base:want",
     "ability_base:zuri",
     "access_token:libaccesstoken_sdk",
-    "dataability:native_dataability",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
