--- a/services/test/moduletest/on_new_want_module_test/BUILD.gn
+++ b/services/test/moduletest/on_new_want_module_test/BUILD.gn
@@ -85,7 +85,6 @@ ohos_moduletest("on_new_want_module_test") {
     "access_token:libaccesstoken_sdk",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
-    "dataability:native_dataability",
     "dsoftbus:softbus_client",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
@@ -93,6 +92,7 @@ ohos_moduletest("on_new_want_module_test") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
