--- a/services/test/moduletest/panding_want_manager_test/BUILD.gn
+++ b/services/test/moduletest/panding_want_manager_test/BUILD.gn
@@ -77,7 +77,6 @@ ohos_moduletest("PandingWantMgrTest") {
     "bundle_framework:appexecfwk_core",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
-    "dataability:native_dataability",
     "dsoftbus:softbus_client",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
@@ -85,6 +84,7 @@ ohos_moduletest("PandingWantMgrTest") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
