--- a/services/test/moduletest/running_infos_module_test/BUILD.gn
+++ b/services/test/moduletest/running_infos_module_test/BUILD.gn
@@ -110,7 +110,6 @@ ohos_moduletest("running_infos_module_test") {
     "access_token:libaccesstoken_sdk",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
-    "dataability:native_dataability",
     "dsoftbus:softbus_client",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
@@ -118,6 +117,7 @@ ohos_moduletest("running_infos_module_test") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
   ]
 
